Tring to solve concurrency problem in test